--- a/html/css/main.css
+++ b/html/css/main.css
@@ -62,7 +62,8 @@ svg.menu.outer {
 }
 
 svg.menu > g > path {
-    fill: rgb(23 23 23 / 80%);
+    fill-opacity: 0.3;
+    fill: #00000080;
 }
 
 svg.menu > g.sector > path {
@@ -71,7 +72,9 @@ svg.menu > g.sector > path {
 
 svg.menu > g.sector > text,
 svg.menu > g.sector > use {
-    font-family: 'Poppins', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;;
+    font-variant: small-caps;
+    text-shadow: 1.5px 1.5px 5px rgba(1,1,1,1);
     margin-top: 5px;
     font-size: 2.8px;
     letter-spacing: 0.2px;
@@ -81,17 +84,18 @@ svg.menu > g.sector > use {
 }
 
 svg.menu > g.sector:hover > path {
-    fill: #dc143c;
+    fill: #457692;
 
 }
 
 svg.menu > g.center:hover > circle {
-    fill:#dc143c;
+    fill:#457692;
 }
 
 svg.menu > g.center > circle {
     cursor: pointer;
-    fill: rgb(23 23 23 / 80%);
+    fill: #00000080;
+    fill-opacity: 0.3;
 }
 
 svg.menu > g.center > text,
